# CSharpToPythonLearning

./: LICENSE  README.md  requirements.txt  settingup-devbox.md  vscode-python-extensions.md
azure/: README.md
databases/: README.md  REAME.md  demo-orm-table.py  demo-orm-tables.py  requirements.txt
deps-management/: README.md  pip-alternatives.md  pip-dependecies.md  requirements.txt  script.py
deps-management/demo-package/: setup.py
deps-management/demo-package/src/demo_reader/compressed/: bzipped.py
deps-management/demo-package/tests/: test_multireader.py
deps-management/demo-program/: __main__.py
deps-management/demo-program/demo_reader/: multireader.py
deps-management/demo-program/demo_reader/compressed/: gzipped.py
deps-management/demo-program/demo_reader/util/: writer.py
deps-management/demo_reader/: __init__.py
deps-management/poetry_demo/: pyproject.toml
deps-management/poetry_demo/poetry_demo/: script.py
practices/: README.md  csharp-workbook.ipynb  python-workbook.ipynb  requirements.in  requirements.txt
