[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["kdcllc <infor@kingdavidconsulting.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.3"
requests = "^2.31.0"

[tool.poetry.scripts]
showtime = 'poetry_demo.script:main'

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
